@@ -1,3 +1,7 @@
+Update for version 8.3.1 - 10-Oct-14 (PLL)
+    acs2d/main2d.c
+    acs2d/get2dsw.c
+
 Update for version 8.3.0 - 08-Apr-14 (PLL)
     acscte/dopcte.c
 
