@@ -1,8 +1,8 @@
 /* This string is written to the output primary header as CAL_VER. */
 
 
-#define ACS_CAL_VER "8.3.0 (08-Apr-2014)"
-#define ACS_CAL_VER_NUM "8.3.0"
+#define ACS_CAL_VER "8.3.1 (10-Oct-2014)"
+#define ACS_CAL_VER_NUM "8.3.1"
 
 
 /* name and version number of the CTE correction algorithm */
