@@ -25,7 +25,7 @@ def build(bld):
             ../acs2d/doflat.c   ../acs2d/dononlin.c ../acs2d/dophot.c
             ../acs2d/doshad.c   ../acs2d/dospot.c   ../acs2d/get2dflags.c
             ../acs2d/getlintab.c   ../acs2d/getspottab.c ../acs2d/doflash.c
-            ../acs2d/photmode.c ../acs2d/sanity2d.c
+            ../acs2d/photmode.c ../acs2d/sanity2d.c  ../acs2d/get2dsw.c
 
             ../acsccd/acsccd.c   ../acsccd/blevdrift.c ../acsccd/blevfit.c
             ../acsccd/doatod.c   ../acsccd/dobias.c ../acsccd/doblev.c
