@@ -1,3 +1,7 @@
+### 10-Oct-2014 - PLL -- Version 8.3.1
+    ACS2D standalone executable now reads calibration flags from header, not
+    command line.
+
 ### 08-Apr-2014 - PLL -- Version 8.3.0
     PCTECORR now supports WFC 2K subarrays.
 
